[package]
name = "secure-survey-crypto-node"
version = "0.1.0"
description = "Rust HE node bindings"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secure-survey = { git = "https://github.com/medelium/secure-suvey-rs.git" }
serde_json = "1.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
